5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1759_2107.log
== TEST (2019-05-29 19:47:42) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:")))

consoante = a.count("a","e","i","o","u")

print(consoante)
-- ERROR:
File "XXXX", line 2
    a = input()))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:47:47) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:")

consoante = a.count("a","e","i","o","u")

print(consoante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:47:59) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:")

consoante = a.count("a")

print(consoante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:48:30) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:")

consoante = a.count("a" , "e")

print(consoante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:48:43) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:")

consoante = a.count("a" and "e")

print(consoante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:48:54) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:")

consoante = a.count("a" and "e")

print(consoante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:48:58) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:")

consoante = a.count("a" and "e")

print(consoante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:49:04) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:")

consoante = a.count("a" and "e")

print(consoante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:49:10) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:")

consoante = a.count("a" , "e")

print(consoante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:54:17) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
i = 0
c = 0
while(i < len(a)):
	if(a[i] != a1 or e or i or o or u)
		c = c+1
	i = i + 1
print(a1 + e + i + o + u)
print(c)
-- ERROR:
File "XXXX", line 12
    if(a[i] != a1 or e or i or o or u)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:54:31) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
i = 0
c = 0
while(i < len(a)):
	if(a[i] != a1 or e or i or o or u):
		c = c+1
	i = i + 1
print(a1 + e + i + o + u)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:55:07) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
i = 0
c = 0
while(i < len(a)):
	if(a[i] != a1 or e or i or o or u):
		c = c+1
	i = i + 1
print(a1)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:55:19) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
i = 0
c = 0
while(i < len(a)):
	if(a[i] != a1 or e or i or o or u):
		c = c+1
	i = i + 1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:55:30) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
i = 0
c = 0
while(i < len(a)):
	if(a[i] != a1 or e or i or o or u):
		c = c+1
	i = i + 1
print(i)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:56:44) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
I = 0
C = 0
while(I < len(a)):
	if(a[I] != a1 or e or i or o or u):
		C = C+1
	I = I + 1
print(a1+e+o+u)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:56:53) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
I = 0
C = 0
while(I < len(a)):
	if(a[I] != a1 or e or i or o or u):
		C = C+1
	I = I + 1
print(a1+e+o+u)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:56:56) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
I = 0
C = 0
while(I < len(a)):
	if(a[I] != a1 or e or i or o or u):
		C = C+1
	I = I + 1
print(a1+e+o+u)
print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:57:09) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
I = 0
C = 0
while(I < len(a)):
	if(a[I] != a1 or e or i or o or u):
		C = C+1
	I = I + 1
print(a1+e+i+o+u)
print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:58:09) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
I = 0
C = 0 
while(I < len(a)):
	if(a[I] != a1 or e or i or o or u):
		C = C+1
	I = I + 1
print(a1+e+i+o+u)
print(C-(a1+e+i+o+u))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:58:17) 
-- CODE:
from numpy import*
a = input("Digite um palavra meu consagrado:").lower()

a1 = a.count("a")
e = a.count("e")
i = a.count("i")
o = a.count("o")
u = a.count("u")
I = 0
C = 0 
while(I < len(a)):
	if(a[I] != a1 or e or i or o or u):
		C = C+1
	I = I + 1
print(a1+e+i+o+u)
print(C-(a1+e+i+o+u))
-- EXECUTION TIME:
0.53418
-- TEST CASE 1:
---- input:
ABCD
---- correct output:
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
STRING
---- correct output:
1
5
---- user output:
1
5
-- TEST CASE 3:
---- input:
TESTE
---- correct output:
2
3
---- user output:
2
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
